# Jplayer

./: .gitignore  HotKey.py  README.md  alembic.ini  clean.sh  config.ini  do  logging_adaptor.py  media_list.py  nfs.py  notdo  play.py  player.py  requirements.txt  run_ut.sh  setup.cfg  setup.py  tox.ini  update_list.py
etc/sparrow-player/: config.ini
migration/: env.py
migration/versions/: 12f368277603_convert_to_utf8.py  29f08bd14ca2_add_media_player_table.py  6dbc11710211_media_list.py  d3c4e42d95db_convert_to_utf8.py  f95cbdc5de3d_split_into_playinfo_and_mediainfo.py
models/: media_list.py
sparrow-player/: HotKey.py  media_list.py  nfs.py
sparrow_player/: hot_key.py  logging_adaptor.py  media_list.py  nfs.py  play.py  player.py  utils.py  web_server.py
tests/: test_MediaList.py  test_Player.py  test_pylint.py
