[metadata]
name = sparrow-player
summary = sparrow-player
description-file =
    README.md
# author = 
# author-email = 
# home-page = 
classifier =
    Programming Language :: Python :: 3

[files]
packages =
    sparrow-player
data_files =
    etc/sparrow-player =
        etc/sparrow-player/config.ini
extra_files =
    requirements.txt

[entry_points]
console_scripts =
    sparrow-player = play:main
